<resources>
    <string name="app_name">ExpirationDateApp</string>
    <string name="button_add">추가</string>
    <string name="button_view">보기</string>
    <string name="button_recipe">레시피</string>
    <string name="button_forum">커뮤니티</string>
    <string name="button_food_bank">푸드뱅크</string>
    <string name="text_add_new">새로 추가</string>
    <string name="button_ocr">OCR</string>
    <string name="button_stt">STT</string>
    <string name="button_manual">수동</string>
    <string name="text_favorite">즐겨찾기</string>
    <string name="stored_frozen">냉동</string>
    <string name="stored_cold">냉장</string>
    <string name="stored_else">그 외</string>
    <string name="button_del" translatable="false">X</string>
    <string name="text_product_name">제품 이름</string>
    <string name="text_expiry_date">유통기한</string>
    <string name="button_cancel">취소</string>
    <string name="action_add_to_favorite">즐겨찾기 추가</string>
    <string name="snackbar_empty_name">상품 이름을 입력하세요.</string>
    <string name="snackbar_empty_stored">저장할 위치를 고르세요.</string>
    <string name="snackbar_empty_expiry_date">유통기한을 입력해 주세요.</string>
    <string name="text_basket_title">장바구니</string>
    <string name="button_delete_all">모두 지우기</string>
    <string name="kakao_rest_api_key">4114eba032f1b6d7a5ae47491151b399</string>
    <string name="button_get_camera">카메라</string>
    <string name="button_get_gallery">갤러리</string>
    <string name="text_add_name_title">상표 입력</string>
    <string name="text_add_expiry_date_title">유통기한 입력</string>
    <string name="text_add_name_crop_desc">상표를 선택하세요.</string>
    <string name="text_add_expiry_date_crop_desc">유통기한을 선택하세요.</string>
    <string name="button_crop">선택</string>
    <string name="text_result">결과</string>
    <string name="text_ask_name_pic">상표 사진을 어떻게 가져올까요?</string>
    <string name="text_ask_expiry_date_pic">유통기한 사진을 어떻게 가져올까요?</string>
    <string name="key_get_type">GET_TYPE_KEY</string>
    <string name="key_name_data">KEY_NAME_DATA</string>
    <string name="key_expiry_data">KEY_EXPIRY_DATA</string>
    <string name="key_stored_type">KEY_STORED_TYPE</string>
    <string name="action_rotate">회전</string>
    <string name="action_reset">초기화</string>
    <string name="text_listening">듣는중</string>
    <string name="text_waitiing">대기중</string>
    <string name="text_listened">들음</string>
    <string name="button_retry">다시</string>
    <string name="text_stt_name_input_desc">등록할려는 상품을 말하세요.</string>
    <string name="text_stt_expiry_date_input_desc">등록할려는 유통기한을 말해세요.</string>
    <string name="text_stt_select_result">이걸 말했나요?</string>
    <string name="button_empty">없음</string>
    <string name="text_default_expiry_date">기본유통기한</string>
    <string name="text_day">일</string>
    <string name="text_day_after">몇일후</string>
    <string name="button_using">사용</string>
    <string name="menu_order_by_name">이름순으로 정렬(가나다순)</string>
    <string name="menu_order_by_name_reverse">이름순으로 정렬(가나다 역순)</string>
    <string name="menu_order_by_expiry_date">유통기한 빠른순으로 정렬</string>
    <string name="menu_order_by_expiry_date_reverse">유통기한 느린순으로 정렬</string>
    <string name="text_x_days_after">일 지남</string>
    <string name="text_notification_title">유통기한 알림</string>
    <string name="text_notification_content">%1$s 유통기한 %2$d일 남음</string>
    <string name="text_channel_name">유통기한 알림</string>
    <string name="text_channel_desc">유통기한 알림</string>
    <string name="text_notification_zero_content">%1$s 유통기한 오늘까지</string>
    <string name="stored_overdue">유통기한 지남</string>
    <string name="text_main_ingredients">주재료</string>
    <string name="text_sub_ingredients">부재료</string>
    <string name="text_seasoning_ingredients">양념</string>
    <string name="text_recipe_progress">만드는 방법</string>
    <string name="text_tip">팁</string>
    <string name="text_no_recipe_to_show">보여줄 레시피 없습니다.</string>
    <string name="text_no_show">거부</string>
    <string name="text_yes_show">허용</string>
    <string name="action_show_disliked">거부된 레시피 보기</string>
    <string name="text_disliked_title">거부한 레시피들</string>
    <string name="text_recognized_text">인식된 텍스트</string>
    <string name="text_predict_expiry_date">예상 유통기한</string>
    <string name="text_predict_date_fail">유통기한 인식 실패</string>
    <string name="snackbar_old_expiry_date">유통기한이 지났거나 제조일자일수도 있음</string>
    <string name="text_error_audio_fail">음성인력이 불가하거나 마이크 접근이 허용되지 않아요. 마이크 접근을 허용하고 다시 시도하거나 나중에 다시 시도하세요.</string>
    <string name="text_error_auth_fail">apikey 인증 실패. 앱 개발자한테 연락주세요.</string>
    <string name="text_error_network">네트워크에 문제가 생겼습니다. 해결하고 다시 시도해주세요.</string>
    <string name="text_error_server">서버에 문제가 생겼습니다. 조금 있다 다시 시도해주세요.</string>
    <string name="text_error_no_result">아무 텍스트를 인식하지 못 했습니다. 다시 시도해주세요.</string>
    <string name="text_error_too_many_requests">요청이 너무 많습니다. 나중에 다시 시도 해주세요.</string>
    <string name="text_error_userdict_empty">userdict 비었음. 앱 개발자한테 연락주세요.</string>
    <string name="text_error_server_unsupport_service">제공하지 않는 서비스. 앱 개발자한테 연락주세요.</string>
    <string name="text_error_client">client 오류. 앱 개발자한테 연락주세요.</string>
    <string name="text_need_audio">오디오 녹음이 필요합니다.</string>
    <string name="text_need_storage">카카오 음성에 외부 저장 장치 접근 필요합니다.</string>
    <string name="text_loading">로딩 중...</string>
    <string name="key_id">PREF_KEY_ID</string>
    <string name="key_token">PREF_KEY_TOKEN</string>
</resources>
