<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favoriteItem_text_expiry_desc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/favoriteItem_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="우유" />

    <Button
        android:id="@+id/favoriteItem_button_del"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/favoriteItem_radioGroup_stored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoriteItem_text_name">

        <RadioButton
            android:id="@+id/favoriteItem_radio_button_cold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_cold" />

        <RadioButton
            android:id="@+id/favoriteItem_radio_button_frozen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_frozen" />

        <RadioButton
            android:id="@+id/favoriteItem_radio_button_else"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_else" />
    </RadioGroup>

    <Button
        android:id="@+id/favoriteItem_button_ocr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_ocr"
        app:layout_constraintBaseline_toBaselineOf="@+id/favoriteItem_button_stt"
        app:layout_constraintEnd_toStartOf="@+id/favoriteItem_button_stt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/favoriteItem_button_stt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_stt"
        app:layout_constraintEnd_toStartOf="@+id/favoriteItem_button_manual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/favoriteItem_button_ocr"
        app:layout_constraintTop_toBottomOf="@+id/favoriteItem_edit_expiry_date" />

    <Button
        android:id="@+id/favoriteItem_button_manual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_manual"
        app:layout_constraintBaseline_toBaselineOf="@+id/favoriteItem_button_stt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/favoriteItem_button_stt" />

    <TextView
        android:id="@+id/favoriteItem_text_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/text_day"
        app:layout_constraintBaseline_toBaselineOf="@+id/favoriteItem_edit_expiry_date"
        app:layout_constraintEnd_toStartOf="@+id/favoriteItem_button_expiry_date_none" />

    <TextView
        android:id="@+id/favoriteItem_text_default_expiry_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_default_expiry_date"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/favoriteItem_edit_expiry_date"
        app:layout_constraintEnd_toStartOf="@+id/favoriteItem_edit_expiry_date"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/favoriteItem_edit_expiry_date"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/favoriteItem_text_day"
        app:layout_constraintTop_toBottomOf="@+id/favoriteItem_radioGroup_stored"
        tools:text="23" />

    <Button
        android:id="@+id/favoriteItem_button_expiry_date_none"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button_empty"
        android:textAlignment="viewEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/favoriteItem_edit_expiry_date"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>