<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- nes = name, expiry date, stored place 뜻함 -->
    <TextView
        android:id="@+id/nesDialog_text_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_product_name"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nesDialog_edittext_product_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nesDialog_text_expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_expiry_date"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nesDialog_text_expiry_date_show"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nesDialog_edittext_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nesDialog_text_product_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nesDialog_text_expiry_date_show"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        app:layout_constraintEnd_toStartOf="@+id/nesDialog_imgButton_calandar"
        app:layout_constraintStart_toEndOf="@+id/nesDialog_text_expiry_date"
        app:layout_constraintTop_toTopOf="@+id/nesDialog_barrier_product_name" />

    <RadioGroup
        android:id="@+id/nesDialog_radio_group_stored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nesDialog_barrier_expiry_date"
        tools:visibility="visible">

        <RadioButton
            android:id="@+id/nesDialog_radio_button_cold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_cold" />

        <RadioButton
            android:id="@+id/nesDialog_radio_button_frozen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_frozen" />

        <RadioButton
            android:id="@+id/nesDialog_radio_button_else"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stored_else" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/nesDialog_barrier_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="nesDialog_text_product_name,nesDialog_edittext_product_name"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/nesDialog_barrier_expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="nesDialog_text_expiry_date,nesDialog_text_expiry_date_show"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/nesDialog_group_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="nesDialog_text_product_name,nesDialog_edittext_product_name,nesDialog_barrier_product_name"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/nesDialog_group_expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="nesDialog_text_expiry_date,nesDialog_text_expiry_date_show,nesDialog_barrier_expiry_date"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/nesDialog_imgButton_calandar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/nesDialog_barrier_expiry_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nesDialog_edittext_product_name"
        app:srcCompat="@drawable/calendar" />
</androidx.constraintlayout.widget.ConstraintLayout>