<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/viewItemOverdue_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="아이스크림" />

    <Button
        android:id="@+id/viewItemOverdue_button_del"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewItemOverdue_text_expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewItemOverdue_text_stored"
        tools:text="3/3/20" />

    <TextView
        android:id="@+id/viewItemOverdue_text_past_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewItemOverdue_text_expiry_date"
        app:layout_constraintEnd_toStartOf="@+id/viewItemOverdue_text_x_day_past"
        tools:text="32" />

    <TextView
        android:id="@+id/viewItemOverdue_text_x_day_past"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/text_x_days_after"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewItemOverdue_text_past_date"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/viewItemOverdue_text_stored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewItemOverdue_text_name"
        tools:text="@string/stored_cold" />
</androidx.constraintlayout.widget.ConstraintLayout>